# macgyver

./: .gitattributes  .gitignore  BUILD.md  CODE_DE_CONDUITE.md  CONTRIBUTION.md  LICENCE  README.md  package-lock.json  package.json  svelte.config.js  tsconfig.json  vite.config.js
.github/workflows/: release.yml
.svelte-kit/: ambient.d.ts  non-ambient.d.ts  tsconfig.json
.svelte-kit/output/client/.vite/: manifest.json
.svelte-kit/output/client/_app/: version.json
.svelte-kit/output/client/_app/immutable/assets/: 4.t8lhcXMH.css  5.DJy6Tl0y.css  6.BEJ0-qKK.css  BoutonPrincipal.D5ugE7lK.css  CarteContenu.FzhZj4uP.css
.svelte-kit/output/client/_app/immutable/chunks/: B6yj-TJc.js  B93ebTeG.js  BAAQZNEU.js  CkMjN8Jh.js  Djf__QTE.js  HGNovh_P.js  bDhUUaV2.js
.svelte-kit/output/client/_app/immutable/entry/: app.B5W4P3Og.js  start.Baqi9xV-.js
.svelte-kit/output/client/_app/immutable/nodes/: 0.XNcZ_1o_.js  1.C5yzOSVW.js  2.BZ5jG8W1.js  3.DN0Y896Y.js  4.BAWRtvu7.js  5.BWTsKwc9.js  6.DUGQe1v6.js  7.BtllbHFQ.js
.svelte-kit/output/server/: index.js  manifest.js  remote-entry.js
.svelte-kit/output/server/.vite/: manifest.json
.svelte-kit/output/server/_app/immutable/assets/: _layout.CH4srT2M.css  _page.B5yIcnyh.css  _page.CT13Wr3W.css  _page.GbBU-NTP.css
.svelte-kit/output/server/chunks/: BoutonPrincipal.js  CarteContenu.js  internal.js  shared.js  ssr.js  stores.js
.svelte-kit/output/server/entries/fallbacks/: error.svelte.js
.svelte-kit/output/server/entries/pages/: _layout.js  _layout.svelte.js  _page.svelte.js
.svelte-kit/output/server/entries/pages/images/: _page.svelte.js
.svelte-kit/output/server/entries/pages/notes/: _page.svelte.js
.svelte-kit/output/server/entries/pages/pdf/: _page.svelte.js
.svelte-kit/output/server/entries/pages/pomodoro/: _page.svelte.js
.svelte-kit/output/server/entries/pages/todos/: _page.svelte.js
.svelte-kit/output/server/nodes/: 0.js  1.js  2.js  3.js  4.js  5.js  6.js  7.js
.svelte-kit/types/: route_meta_data.json
.svelte-kit/types/src/routes/: $types.d.ts
.svelte-kit/types/src/routes/images/: $types.d.ts
.svelte-kit/types/src/routes/pdf/: $types.d.ts
.svelte-kit/types/src/routes/pomodoro/: $types.d.ts
scripts/: build-production.ps1
src/: app.html
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/src/: erreurs.rs  main.rs  types.rs
src-tauri/src/commandes/: images.rs  mod.rs  pdf.rs  productivite.rs
src-tauri/src/utilitaires/: fichiers.rs  formatage.rs  mod.rs  progression.rs  validation.rs
src/lib/composants/: BoutonPrincipal.svelte  CarteContenu.svelte  IndicateurChargement.svelte  index.js
src/lib/styles/: global.css
src/routes/: +layout.js  +layout.svelte  +page.svelte
src/routes/images/: +page.svelte
src/routes/notes/: +page.svelte
src/routes/pdf/: +page.svelte
src/routes/pomodoro/: +page.svelte
src/routes/todos/: +page.svelte
